--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     
+    <p>Далеко-далеко, за словесными горами в стране гласных и 
+        согласных живут рыбные тексты. Заголовок ее ipsum запятых 
+        вершину рот, грамматики заглавных даль свой океана строчка 
+        решила буквоград, имеет одна? Переулка он рекламных 
+        семантика.</p>
+
     <script src="js/script.js">
         
 
