новая ветка с первым уроком

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         согласных живут рыбные тексты. Заголовок ее ipsum запятых 
         вершину рот, грамматики заглавных даль свой океана строчка 
         решила буквоград, имеет одна? Переулка он рекламных 
-        семантика.  </p>
+        семантика. Привет </p>
 
     <script src="js/script.js">
         
